# carbonite

./: .dockerignore  Cargo.toml  README.md  app_deploy.sh  dockerbuild.sh  justfile  readme.md  spec.yaml
backend/: .env  @2  Cargo.toml  readme.md
backend/config/: base.yaml  config.yaml  production.yaml
backend/migrations/: 20240702205211_create_subscriptions_table.sql  20240706115907_make_status_not_null_in_subscriptions.sql  20240706120711_create_subscription_tokens_table.sql
backend/scripts/: init_db.sh
backend/src/: configuration.rs  email_client.rs  main.rs  startup.rs  telemetry.rs
backend/src/domain/: mod.rs  subscriber.rs
backend/src/routes/: confirm.rs  mod.rs  subscribe.rs
backend/tests/: health_check.rs
backend/tests/api/: health_check.rs  helpers.rs  subscriptions.rs  subscriptions_confirm.rs
docker/backend/: Dockerfile
docker/frontend/: Dockerfile
k8s/: kind-1.30.yaml
src/: lib.rs  main.rs
tests/: health_check.rs
web/: Cargo.toml
web/src/: lib.rs
web/tests/: health_check.rs
