[package]
name = "carbonite"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
chrono = "0.4.38"
config = "0.14.0"
env_logger = "0.11.3"
log = "0.4.22"
serde = { version = "1.0.203", features = ["derive"] }
uuid = {version = "1.9.1", features = ["v4"]}

[dependencies.sqlx]
version = "0.7.4"
default-features = false
features = [
  "runtime-tokio-rustls",  # use tokio for runtime for futures and rustls for TLS backend
  "macros", 
  "postgres", 
  "uuid", 
  "chrono", 
  "migrate"
]

[lib]
path = "src/lib.rs"

# Notice the double square brackets:  It's an array in TOML's syntax
# We can have only one library ina project, but we can have multiple binaries
[[bin]]
path = "src/main.rs"
name = "carbonite"

[dev-dependencies]
reqwest = "0.12.5"
