[package]
name = "carbonite"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
chrono = "0.4.38"
config = "0.14.0"
env_logger = "0.11.3"
once_cell = "1.19.0"
rand = {version="0.8.5", features=["std_rng"]}
reqwest = {version = "0.12.5", features=["json", "rustls-tls"]}
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
serde-aux = "4.5.0"
tokio = { version = "1.38.0", features = ["rt", "macros"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-actix-web = "0.7.11"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
unicode-segmentation = "1.11.0"
uuid = {version = "1.9.1", features = ["v4"]}
validator = {version="0.18.1", features=["derive"]} 

[dependencies.sqlx]
version = "0.7.4"
default-features = false
features = [
  "runtime-tokio-rustls",  # use tokio for runtime for futures and rustls for TLS backend
  "macros", 
  "postgres", 
  "uuid", 
  "chrono", 
  "migrate"
]

[lib]
path = "src/lib.rs"

# Notice the double square brackets:  It's an array in TOML's syntax
# We can have only one library ina project, but we can have multiple binaries
[[bin]]
path = "src/main.rs"
name = "carbonite"

[dev-dependencies]
claim = "0.5.0"
fake = "2.9.2"
linkify = "0.10.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand_core = "0.6.4"
serde_json = "1.0.120"
wiremock = "0.6.0"
