[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
serde = { version = "1.0.203", features = ["derive"] }

[lib]
path = "src/lib.rs"

# Notice the double square brackets:  It's an array in TOML's syntax
# We can have only one library ina project, but we can have multiple binaries
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dev-dependencies]
reqwest = "0.12.5"
